--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ current: index
 <div class="container-fluid hero">
   <div class="container h-100 d-flex align-items-center">
    <div class="row">
-    <div class="col-12 col-lg-11 offset-lg-1">
+    <div data-aos="zoom-out-down" class="col-12 col-lg-11 offset-lg-1">
       <p>健身輕時尚</p>
       <h1 class="fw-bold mb-3 mb-md-0">DOYOGA，做你的瑜珈</h1>
       <h3 class="fs-4 mb-4">多給自己一點時間享受靜謐，傾聽內心的聲音。</h2>
@@ -27,7 +27,7 @@ current: index
     <p class="fs-5 mb-6 mb-lg-9 text-secondary text-center">DOYOGA 可以帶給你...</p>
     <div class="row">
       <div class="col-12 col-md-4">
-        <div class="card mb-4 mb-md-0 text-white">
+        <div data-aos="zoom-in" class="card mb-4 mb-md-0 text-white">
           <img src="./assets/images/photo-1593810450967-f9c42742e326.jpeg" alt="yoga-1" class="rounded-3" height="420">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">整體健身</h5>
@@ -36,7 +36,7 @@ current: index
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card mb-4 mb-md-0 text-white">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="card mb-4 mb-md-0 text-white">
           <img src="./assets/images/photo-1593810451137-5dc55105dace.jpeg" alt="yoga-2" class="rounded-3" height="420">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">減壓放鬆</h5>
@@ -45,7 +45,7 @@ current: index
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card text-white">
+        <div data-aos="zoom-in" data-aos-duration="1200" class="card text-white">
           <img src="./assets/images/photo-1599901860904-17e6ed7083a0.jpeg" alt="yoga-3" class="rounded-3" height="420">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">局部雕塑</h5>
@@ -60,14 +60,14 @@ current: index
 <section class="pt-9 pb-11 py-lg-14 bg-primary">
   <div class="container">
     <div class="row">
-      <div class="d-none d-lg-block col-lg-6">
+      <div data-aos="fade-down-right" class="d-none d-lg-block col-lg-6">
         <img src="./assets/images/photo-1540206276207-3af25c08abc4.jpeg" alt="" class="rounded-3 w-100" height="628">
       </div>
       <div class="col-md-10 offset-md-2 col-lg-6 offset-lg-0">
         <h2 class="fs-3 fw-bold text-center text-lg-start text-secondary-dark mt-0 mt-lg-8 mb-1">頂尖師資、專業教學</h2>
         <p class="fs-5 mb-6 text-secondary">強力師資，經歷豐富，協會認證。運用引導式教學，針對不同需求的人制定專屬課程。</p>
         <ul class="list-unstyled">
-          <li class="bg-white p-4 py-md-10 px-md-11 ms-md-n15 mb-4 rounded-3 d-flex align-items-center">
+          <li data-aos="fade-left" class="bg-white p-4 py-md-10 px-md-11 ms-md-n15 mb-4 rounded-3 d-flex align-items-center">
             <img src="./assets/images/teacher-1.png" alt="">
             <div class="ms-4 ms-md-5">
               <h5 class="mb-1">Carol Tang 老師</h5>
@@ -75,14 +75,14 @@ current: index
               <p>瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
             </div>
           </li>
-          <li class="bg-white p-4 py-md-6 px-md-9 mb-4 rounded-3 d-flex align-items-center">
+          <li data-aos="fade-left" class="bg-white p-4 py-md-6 px-md-9 mb-4 rounded-3 d-flex align-items-center">
             <img src="./assets/images/teacher-2.png" alt="">
             <div class="ms-4 ms-md-5">
               <h5 class="mb-1">Kanae 老師</h5>
               <p>教學經歷 10 年</p>
             </div>
           </li>
-          <li class="bg-white p-4 py-md-6 px-md-9 rounded-3 d-flex align-items-center">
+          <li data-aos="fade-left" class="bg-white p-4 py-md-6 px-md-9 rounded-3 d-flex align-items-center">
             <img src="./assets/images/teacher-3.png" alt="">
             <div class="ms-4 ms-md-5">
               <h5 class="mb-1">Asa Ifrit 老師</h5>
@@ -100,22 +100,22 @@ current: index
     <div class="row flex-column-reverse flex-md-row">
       <div class="col-12 col-md-6">
         <div class="row">
-          <div class="col-6 col-md-8">
+          <div data-aos="flip-left" class="col-6 col-md-8">
             <img src="./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg" alt="pic" class="rounded-3 w-100 img-h-l">
           </div>
-          <div class="col-6 col-md-4 d-flex flex-md-column justify-content-between">
+          <div data-aos="flip-right" class="col-6 col-md-4 d-flex flex-md-column justify-content-between">
             <img src="./assets/images/white round table near brown wooden chair.jpg" alt="pic" class="rounded-3 w-100 img-h-m">
             <img src="./assets/images/woman in black sports bra and blue denim jeans doing yoga.jpg" alt="pic" class="d-none d-md-block rounded-3 w-100 img-h-m">
           </div>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-5 d-flex align-items-center">
-        <div class="mb-4 mb-md-0">
+        <div data-aos="fade-left" class="mb-4 mb-md-0">
           <h2 class="fs-3 fw-bold text-secondary-dark mb-1">舒適空間、靜心放鬆</h2>
           <p class="fs-5 text-secondary mb-6">我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。</p>
-          <a href="" class="text-secondary-dark d-flex align-items-center">
+          <a href="" class="text-secondary-dark d-flex align-items-center hvr-icon-forward">
             <span>環境介紹</span>
-            <span class="material-icons ms-3">arrow_right_alt</span></a>
+            <span class="material-icons ms-3 hvr-icon">arrow_right_alt</span></a>
         </div>
       </div>
     </div>
@@ -126,12 +126,12 @@ current: index
   <div class="container container-lg-fluid">
     <div class="row">
       <div class="col-12 col-md-6 offset-0 col-lg-5 offset-lg-2 d-flex align-items-center">
-        <div class="mb-4 mb-md-0">
+        <div data-aos="fade-right" class="mb-4 mb-md-0">
           <h2 class="text-secondary-dark fs-3 fw-bold mb-1">精心設計、課程多元</h2>
           <p class="text-secondary fs-5 mb-6">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</p>
-          <a href="#" class="text-secondary-dark d-flex align-items-center">
+          <a href="#" class="text-secondary-dark d-flex align-items-center hvr-icon-forward">
             <span>課程介紹</span>
-            <span class="material-icons ms-3">arrow_right_alt</span>
+            <span class="material-icons ms-3 hvr-icon">arrow_right_alt</span>
           </a>
         </div>
       </div>
@@ -164,7 +164,7 @@ current: index
     <p class="text-center text-secondary fs-5 mb-6 mb-lg-9">DOYOGA 可以帶給你...</p>
     <ul class="list-unstyled row">
       <li class="col-12 col-lg-4">
-        <div class="card mb-4 mb-md-6 mb-lg-0">
+        <div data-aos="zoom-out" class="card mb-4 mb-md-6 mb-lg-0">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman in white tank top and white leggings bending her body.jpg" alt="" class="card-img-top card-img-top-h">
@@ -181,7 +181,7 @@ current: index
         </div>
       </li>
       <li class="col-12 col-lg-4">
-        <div class="card mb-4 mb-md-6 mb-lg-0">
+        <div data-aos="zoom-out" data-aos-duration="2000" class="card mb-4 mb-md-6 mb-lg-0">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman performing yoga.jpg" alt="" class="card-img-top card-img-top-h">
@@ -198,7 +198,7 @@ current: index
         </div>
       </li>
       <li class="col-12 col-lg-4">
-        <div class="card">
+        <div data-aos="zoom-out" data-aos-duration="3000" class="card">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman in blue leggings and black tank top doing yoga.jpg" alt="" class="card-img-top card-img-top-h">
@@ -223,7 +223,7 @@ current: index
     <h2 class="fs-3 fw-bold text-center text-secondary-dark mb-4">聽聽他們怎麼說</h2>
     <!-- swiper feedbackSwiper -->
     <div class="swiper feedbackSwiper">
-      <ul class="list-unstyled swiper-wrapper">
+      <ul data-aos="zoom-in-down" data-aos-duration="2500" class="list-unstyled swiper-wrapper">
         <li class="swiper-slide">
           <div class="bg-white border-1 rounded-3 p-4 mt-4 d-flex w-100">
             <div class="d-flex align-items-center"><img src="./assets/images/user-1.png" alt="user-1" class="me-5 img-fluid rounded-circle"></div>
