--- a/app/surroundings.html
+++ b/app/surroundings.html
@@ -7,13 +7,13 @@ current: surroundings
 <!-- 瑜珈空間 -->
 <section class="pt-11 pb-10 pt-md-14 py-lg-14">
   <div class="container">
-    <h1 class="fs-3 fw-bold text-center text-secondary-dark">瑜珈空間</h1>
+    <h1 data-aos="fade-down" class="fs-3 fw-bold text-center text-secondary-dark">瑜珈空間</h1>
     <div class="row mt-6 mt-md-9">
       <!-- surround pic -->
       <div class="col-12 col-md-8">
         <ul class="list-unstyled row">
           <li class="col-12">
-            <div class="card mb-4 mb-lg-6 text-white">
+            <div data-aos="zoom-in" data-aos-duration="500" class="card mb-4 mb-lg-6 text-white">
               <img src="./assets/images/blue swimming pool near green potted plant.jpg" alt="surroundings-1" class="rounded-3 overlay-img-h">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
                 <h3 class="card-title fs-4">A、B 團體課教室</h3>
@@ -22,7 +22,7 @@ current: surroundings
             </div>
           </li>
           <li class="col-12 col-md-6">
-            <div class="card mb-4 mb-lg-6 text-white">
+            <div data-aos="zoom-in" data-aos-duration="500" class="card mb-4 mb-lg-6 text-white">
               <img src="./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg" alt="surroundings-2" class="rounded-3 overlay-img-h">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
                 <h3 class="card-title fs-4">C、D 個人訓練室</h3>
@@ -31,7 +31,7 @@ current: surroundings
             </div>
           </li>
           <li class="col-12 col-md-6">
-            <div class="card mb-4 mb-lg-6 text-white">
+            <div data-aos="zoom-in" data-aos-duration="500" class="card mb-4 mb-lg-6 text-white">
               <img src="./assets/images/white ceramic sink near white ceramic sink.jpg" alt="surroundings-3" class="rounded-3 overlay-img-h">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
                 <h3 class="card-title fs-4">淋浴間</h3>
@@ -40,7 +40,7 @@ current: surroundings
             </div>
           </li>
           <li class="col-12 col-md-6">
-            <div class="card mb-4 mb-lg-6 text-white">
+            <div data-aos="zoom-in" data-aos-duration="500" class="card mb-4 mb-lg-6 text-white">
               <img src="./assets/images/woman in black sports bra and blue denim jeans doing yoga.jpg" alt="surroundings-4" class="rounded-3 overlay-img-h">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
                 <h3 class="card-title fs-4">器材出租</h3>
@@ -49,7 +49,7 @@ current: surroundings
             </div>
           </li>
           <li class="col-12 col-md-6">
-            <div class="card mb-9 mb-md-4 mb-lg-6 text-white">
+            <div data-aos="zoom-in" data-aos-duration="500" class="card mb-9 mb-md-4 mb-lg-6 text-white">
               <img src="./assets/images/sittin people beside table inside room.jpg" alt="surroundings-5" class="rounded-3 overlay-img-h">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
                 <h3 class="card-title fs-4">交誼廳</h3>
@@ -61,7 +61,7 @@ current: surroundings
       </div>
       <!-- surround text -->
       <div class="col-12 col-md-4">
-        <div class="card border-0 bg-primary text-secondary-dark">
+        <div data-aos="zoom-in" class="card border-0 bg-primary text-secondary-dark">
           <div class="card-body p-4 p-lg-9">
             <h4 class="card-title fs-5 mb-4">DOYOGA 提供：</h4>
             <ul class="list-unstyled mb-2">
@@ -70,9 +70,9 @@ current: surroundings
               <li class="mb-1">男女置物櫃、淋浴間：分別設置在館內 A、B 區。</li>
               <li class="mb-1">舒適交誼廳，咖啡茶水無限供應，假日提供午間蔬食餐點。</li>
             </ul>
-            <a href="" class="text-secondary-dark d-flex align-items-center">
+            <a href="" class="text-secondary-dark d-flex align-items-center hvr-icon-forward">
               <span>立即預約</span>
-              <span class="material-icons ms-2">arrow_right_alt</span>
+              <span class="material-icons ms-2 hvr-icon">arrow_right_alt</span>
             </a>
           </div>
         </div>
@@ -83,8 +83,8 @@ current: surroundings
 <!-- 課程推薦 -->
 <section class="pt-10 pb-11 pt-md-9 pt-lg-10 pb-lg-12 bg-primary">
   <div class="container container-lg-fluid ms-lg-14">
-    <h2 class="fs-3 fw-bold text-secondary-dark text-center">課程推薦</h2>
-    <div class="swiper courseSwiper swiper-container-initialized">
+    <h2 data-aos="zoom-in-down" class="fs-3 fw-bold text-secondary-dark text-center">課程推薦</h2>
+    <div data-aos="zoom-in-down" class="swiper courseSwiper swiper-container-initialized">
       <ul class="list-unstyled mt-9 swiper-wrapper">
         <li class="swiper-slide">
           <div>
