--- a/app/course.html
+++ b/app/course.html
@@ -9,10 +9,10 @@ current: surroundings
 <!-- 本月限定課程 -->
 <section class="container">
   <div class="row g-8 pt-6 pb-11 pb-md-14 pt-lg-9 pb-lg-14 text-secondary-dark">
-    <div class="col-12 col-md-6 offset-lg-1">
+    <div  data-aos="flip-left" class="col-12 col-md-6 offset-lg-1">
       <img src="./assets/images/photo-1540206276207-3af25c08abc4.jpeg" alt="" class="w-100 rounded-3" height="341">
     </div>
-    <div class="col-12 col-md-6 col-lg-5">
+    <div data-aos="fade-left" class="col-12 col-md-6 col-lg-5">
       <h2 class="fs-3 fw-bold">本月限定課程 - 空中瑜珈</h2>
       <p class="d-flex align-items-center">
         <span class="mt-1 text-secondary">授課老師：Carol Tang</span>
@@ -49,17 +49,19 @@ current: surroundings
       <div class="col-12 col-lg-9">
         <ul class="list-unstyled row">
           <!-- row 1 -->
-          <li class="col-12 col-md-6 col-lg-7">
-            <div class="card text-white position-relative mb-8">
-              <img src="./assets/images/woman doing yoga beside wall.jpg" class="card-img-h rounded-3" alt="Basic">
-              <div class="card-img-overlay d-flex flex-column justify-content-end">
-                <h4 class="card-title fs-3 fw-bold">基礎 Basic</h5>
-                <p class="card-text">授課老師：Carol Tang</p>
+          <li data-aos="fade-right" class="col-12 col-md-6 col-lg-7">
+            <a href="" data-bs-toggle="modal" data-bs-target="#courseModal">
+              <div class="card text-white position-relative mb-8">
+                <img src="./assets/images/woman doing yoga beside wall.jpg" class="card-img-h rounded-3" alt="Basic">
+                <div class="card-img-overlay d-flex flex-column justify-content-end">
+                  <h4 class="card-title fs-3 fw-bold">基礎 Basic</h5>
+                  <p class="card-text">授課老師：Carol Tang</p>
+                </div>
+                <span class="position-absolute translate-middle start-7 text-white badge rounded-pill bg-secondary py-2 px-4 ms-6">60 min</span>
               </div>
-              <span class="position-absolute translate-middle start-7 text-white badge rounded-pill bg-secondary py-2 px-4 ms-6">60 min</span>
-            </div>
+            </a>
           </li>
-          <li class="col-12 col-md-6 col-lg-5">
+          <li data-aos="fade-left" class="col-12 col-md-6 col-lg-5">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/photo-1612157777902-5382bc6e864b.jpeg" class="card-img-h rounded-3" alt="Iyengar">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -70,7 +72,7 @@ current: surroundings
             </div>
           </li>
           <!-- row 2 -->
-          <li class="col-12 col-md-6 col-lg-5">
+          <li data-aos="fade-right" class="col-12 col-md-6 col-lg-5">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/woman in black sports bra and black leggings doing yoga.jpg" class="card-img-h rounded-3" alt="Hatha">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -80,7 +82,7 @@ current: surroundings
               <span class="position-absolute translate-middle start-7 text-white badge rounded-pill bg-secondary py-2 px-4 ms-6">60 min</span>
             </div>
           </li>
-          <li class="col-12 col-md-6 col-lg-7">
+          <li data-aos="fade-left" class="col-12 col-md-6 col-lg-7">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/woman in white tank top and white leggings bending her body.jpg" class="card-img-h rounded-3" alt="Universal">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -91,7 +93,7 @@ current: surroundings
             </div>
           </li>
           <!-- row 3 -->
-          <li class="col-12 col-md-6 col-lg-7">
+          <li data-aos="fade-right" class="col-12 col-md-6 col-lg-7">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/two woman dong fitness exercise.jpg" class="card-img-h rounded-3" alt="Arco Yoga">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -101,7 +103,7 @@ current: surroundings
               <span class="position-absolute translate-middle start-7 text-white badge rounded-pill bg-secondary py-2 px-4 ms-6">60 min</span>
             </div>
           </li>
-          <li class="col-12 col-md-6 col-lg-5">
+          <li data-aos="fade-left" class="col-12 col-md-6 col-lg-5">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/woman doing yoga.jpg" class="card-img-h rounded-3" alt="Ashtanga">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -112,7 +114,7 @@ current: surroundings
             </div>
           </li>
           <!-- row 4 -->
-          <li class="col-12 col-md-6 col-lg-5">
+          <li data-aos="fade-right" class="col-12 col-md-6 col-lg-5">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/woman in white tank top and white pants bending her body by the window.jpg" class="card-img-h rounded-3" alt="陰陽 Yin Yang">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -122,7 +124,7 @@ current: surroundings
               <span class="position-absolute translate-middle start-7 text-white badge rounded-pill bg-secondary py-2 px-4 ms-6">60 min</span>
             </div>
           </li>
-          <li class="col-12 col-md-6 col-lg-7">
+          <li data-aos="fade-left" class="col-12 col-md-6 col-lg-7">
             <div class="card text-white position-relative mb-8">
               <img src="./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg" class="card-img-h rounded-3" alt="香氛 Aroma Yoga">
               <div class="card-img-overlay d-flex flex-column justify-content-end">
@@ -150,3 +152,94 @@ current: surroundings
   </div>
 </section>
 <!-- 師資介紹 -->
+<section class="border-top border-secondary-dark pb-13 pt-md-10 mb-lg-12">
+  <h3 class="fs-3 fw-bold text-center text-secondary-dark mb-lg-10">師資介紹</h3>
+  <div data-aos="zoom-in-down" class="container container-lg-fluid ms-lg-14 mt-lg-4">
+    <div class="swiper teacherSwiper swiper-container-initialized pt-0 pt-md-14">
+      <ul class="swiper-wrapper list-unstyled">
+        <li class="swiper-slide h-auto mt-14 mt-md-0">
+          <div class="card card-bg-content bg-secondary text-white h-100">
+            <div class="card-body position-relative">
+              <img src="./assets/images/teacher-1.png" alt="teacher-1" class="card-img-circle position-absolute top-0 start-50 translate-middle rounded-circle border border-4 border-secondary">
+              <h5 class="card-title fw-bold text-center pt-11 pb-1">老師</h5>
+              <h6 class="card-text text-center mb-4">教學經歷 10 年</h6>
+              <p class="card-text">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能， 並將瑜珈自然的融入自己的生活中。”</p>
+              <ul class="list-unstyled pt-4">
+                <li class="mb-1">・協會認證艾揚格瑜珈老師</li>
+                <li class="mb-1">・2010 年完成四年的艾揚格師資培訓</li>
+                <li>・2020 取得艾揚格瑜珈高階認證</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="swiper-slide h-auto mt-14 mt-md-0">
+          <div class="card card-bg-content bg-secondary-dark text-white h-100">
+            <div class="card-body position-relative">
+              <img src="./assets/images/teacher-2.png" alt="teacher-2" class="card-img-circle position-absolute top-0 start-50 translate-middle rounded-circle border border-4 border-secondary">
+              <h5 class="card-title fw-bold text-center pt-11 pb-1">Kanae 老師</h5>
+              <h6 class="card-text text-center mb-4">教學經歷 3 年</h6>
+              <p class="card-text">“希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”</p>
+              <ul class="list-unstyled pt-4">
+                <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+                <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+                <li>・簡善琳瑜珈會館開授倒立研習</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="swiper-slide h-auto mt-14 mt-md-0">
+          <div class="card card-bg-content bg-secondary text-white h-100">
+            <div class="card-body position-relative">
+              <img src="./assets/images/teacher-4.png" alt="teacher-3" class="card-img-circle position-absolute top-0 start-50 translate-middle rounded-circle border border-4 border-secondary">
+              <h5 class="card-title fw-bold text-center pt-11 pb-1">Kuzuha 老師</h5>
+              <h6 class="card-text text-center mb-4">教學經歷 3 年</h6>
+              <p class="card-text">“瑜珈是一種生活態度，學習平衡不強求，堅持不放棄，修煉心靈活在當下。”</p>
+              <ul class="list-unstyled pt-4">
+                <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+                <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+                <li>・簡善琳瑜珈會館開授倒立研習</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="swiper-slide h-auto mt-14 mt-md-0">
+          <div class="card card-bg-content bg-secondary-dark h-100 text-white">
+            <div class="card-body position-relative">
+              <img src="./assets/images/teacher-3.png" alt="teacher-4" class="card-img-circle position-absolute top-0 start-50 translate-middle rounded-circle border border-4 border-secondary">
+              <h5 class="card-title fw-bold text-center pt-11 pb-1">Asa Ifrit 老師</h5>
+              <h6 class="card-text text-center mb-4">教學經歷 5 年</h6>
+              <p class="card-text">“帶著懵懂和好奇開始了瑜珈的探索。 追隨印度瑜珈大師 Atui Shri 學習呼吸控制和冥想以及完成瑜珈大師宋光明師資培訓。”</p>
+              <ul class="list-unstyled pt-4 pb-12">
+                <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+                <li>・AshtangsTTC50小時認證</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+<!-- 課程modal -->
+<div class="modal fade" id="courseModal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content border-0">
+      <div class="modal-body bg-secondary rounded-3 px-md-6 py-md-14 px-lg-12">
+        <div class="row g-8 text-secondary-dark">
+          <div class="col-12 col-md-6 text-center">
+            <img src="./assets/images/photo-1540206276207-3af25c08abc4.jpeg" alt="" class="modal-img rounded-3">
+          </div>
+          <div class="col-12 col-md-6">
+            <h2 class="fs-3 fw-bold text-white">基礎 Basic</h2>
+            <p class="d-flex align-items-center">
+              <span class="mt-1 text-white">授課老師：Carol Tang</span>
+              <span class="text-white badge rounded-pill bg-secondary-dark py-2 px-4 ms-2">60 min</span>
+            </p>
+            <p class="mt-4 text-white">使用掛布懸掛在半空，進行哈達瑜珈體位法練習<br>藉由地心引力的重力原理<br>鍛鍊核心肌群，舒緩脊椎壓力<br>訓練身體協調性，深層放鬆身體<br>課堂裡老師會視同學狀況安排教導倒立動作<br>對於不敢嘗試倒立的同學來說<br>藉由掛布的支持與保護<br>加上老師細心指導，讓同學能更快掌握</p>
+            <a href="" class="mt-4 btn btn-primary btn-lg text-secondary-dark">立即預約</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
