--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@ current: index
 <section class="pt-9 pb-11 py-lg-14 bg-primary">
   <div class="container">
     <div class="row">
-      <div data-aos="fade-down-right" class="d-none d-lg-block col-lg-6">
+      <div data-aos="fade-right" class="d-none d-lg-block col-lg-6">
         <img src="./assets/images/photo-1540206276207-3af25c08abc4.jpeg" alt="" class="rounded-3 w-100" height="628">
       </div>
       <div class="col-md-10 offset-md-2 col-lg-6 offset-lg-0">
@@ -164,7 +164,7 @@ current: index
     <p class="text-center text-secondary fs-5 mb-6 mb-lg-9">DOYOGA 可以帶給你...</p>
     <ul class="list-unstyled row">
       <li class="col-12 col-lg-4">
-        <div data-aos="zoom-out" class="card mb-4 mb-md-6 mb-lg-0">
+        <div data-aos="flip-left" class="card mb-4 mb-md-6 mb-lg-0">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman in white tank top and white leggings bending her body.jpg" alt="" class="card-img-top card-img-top-h">
@@ -181,7 +181,7 @@ current: index
         </div>
       </li>
       <li class="col-12 col-lg-4">
-        <div data-aos="zoom-out" data-aos-duration="2000" class="card mb-4 mb-md-6 mb-lg-0">
+        <div data-aos="flip-left" data-aos-duration="2000" class="card mb-4 mb-md-6 mb-lg-0">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman performing yoga.jpg" alt="" class="card-img-top card-img-top-h">
@@ -198,7 +198,7 @@ current: index
         </div>
       </li>
       <li class="col-12 col-lg-4">
-        <div data-aos="zoom-out" data-aos-duration="3000" class="card">
+        <div data-aos="flip-left" data-aos-duration="2900" class="card">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-12">
               <img src="./assets/images/woman in blue leggings and black tank top doing yoga.jpg" alt="" class="card-img-top card-img-top-h">
